--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   functions = "netlify/functions"
 
 [[redirects]]
-  from = "/proxy/*"
-  to = "/.netlify/functions/proxy"
+  from = "/*"
+  to = "/.netlify/functions/main"
   status = 200
   force = true
